--- a/bts-react/package.json
+++ b/bts-react/package.json
@@ -13,6 +13,7 @@
     "jwt-decode": "^2.2.0",
     "open-color": "^1.7.0",
     "react": "^16.12.0",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.12.0",
     "react-gradient": "^1.0.2",
     "react-redux": "^7.1.3",
