--- a/bts-react/package.json
+++ b/bts-react/package.json
@@ -16,11 +16,12 @@
     "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.12.0",
     "react-gradient": "^1.0.2",
-    "react-redux": "^7.1.3",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.0.1"
   },
   "scripts": {
