post edit, user modal 구현중

--- a/bts-react/package.json
+++ b/bts-react/package.json
@@ -8,11 +8,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "@trendmicro/react-modal": "^3.1.0",
     "axios": "^0.19.2",
     "immutable": "^4.0.0-rc.12",
     "jwt-decode": "^2.2.0",
     "open-color": "^1.7.0",
-    "react": "^16.12.0",
+    "react": "^16.13.0",
     "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.12.0",
     "react-gradient": "^1.0.2",
